--- a/jowenly/assets/css/style.css
+++ b/jowenly/assets/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*------------------------------------------------------------------
 [Master Stylesheet]
-Theme Name:     jowenly-Jewelry Store HTML5 Template
+Theme Name:     Hart Jewelers - Custom Jewelry & Restoration
 Version:        1.0.0
 -------------------------------------------------------------------*/
 /*--------------------------------------------------------------
