--- a/jowenly/assets/sass/layout/_footer.scss
+++ b/jowenly/assets/sass/layout/_footer.scss
@@ -158,7 +158,7 @@
                         transform: translateY(-50%);
                         font-size: 10px;
                         content: "\f115";
-                        font-family: flaticon_jowenly !important;
+                        font-family: hart-jewelers-icons !important;
                     }
 
                     &:hover {
