--- a/jowenly/assets/sass/page/_blog-single.scss
+++ b/jowenly/assets/sass/page/_blog-single.scss
@@ -151,7 +151,7 @@
 			}
 
 			&:before {
-				font-family: flaticon_jowenly !important;
+				font-family: hart-jewelers-icons !important;
 				content: "\f105";
 				font-size: 25px;
 				color: transparentize($white, 0.5);
