--- a/jowenly/assets/sass/style.scss
+++ b/jowenly/assets/sass/style.scss
@@ -1,6 +1,6 @@
 /*------------------------------------------------------------------
 [Master Stylesheet]
-Theme Name:     jowenly-Jewelry Store HTML5 Template
+Theme Name:     Hart Jewelers - Custom Jewelry & Restoration
 Version:        1.0.0
 -------------------------------------------------------------------*/
 
