--- a/jowenly/assets/sass/style.css
+++ b/jowenly/assets/sass/style.css
@@ -77,7 +77,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  color: #687693;
+  color: #2858b8;
   background-color: #fff;
   font-size: 15px;
   overflow-x: hidden;
@@ -90,7 +90,7 @@ body {
 
 p {
   font-size: 16px;
-  color: #687693;
+  color: #3164c9;
   line-height: 1.8em;
 }
 
@@ -100,7 +100,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #626842;
+  color: #2b3969;
   font-family: "Cinzel", serif;
   font-weight: 700;
 }
